Fix Spotbugs and add PMD