@@ -101,7 +101,7 @@
         <checkstyle.plugin.version>2.17</checkstyle.plugin.version>
         <compiler.plugin.verson>3.9.0</compiler.plugin.verson>
         <dependency.plugin.version>3.2.0</dependency.plugin.version>
-        <spotbugs.plugin.version>3.1.12.2</spotbugs.plugin.version>
+        <spotbugs.plugin.version>4.7.3.0</spotbugs.plugin.version>
         <spotless.plugin.version>2.22.1</spotless.plugin.version>
         <war.plugin.version>3.2.3</war.plugin.version>
         <gpg.plugin.version>3.0.1</gpg.plugin.version>
@@ -808,6 +808,11 @@
                         <maxmem>1024m</maxmem>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-pmd-plugin</artifactId>
+                    <version>3.19.0</version>
+                </plugin>
                 <!-- Required to ensure latest versions are used -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -833,6 +838,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>${resources.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.12.1</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -960,16 +970,13 @@
                 <artifactId>spotbugs-maven-plugin</artifactId>
                 <version>${spotbugs.plugin.version}</version>
                 <configuration>
-                    <effort>Low</effort>
+                    <effort>Max</effort>
                     <threshold>Low</threshold>
-                    <xmlOutput>true</xmlOutput>
-                    <findbugsXmlOutputDirectory>
-                        ${project.build.directory}/findbugs
-                    </findbugsXmlOutputDirectory>
+                    <failOnError>false</failOnError>
                     <excludeFilterFile>
                         findbugs-exclude.xml
                     </excludeFilterFile>
-                    <onlyAnalyze>uk.gov.gchq.gaffer.*</onlyAnalyze>
+<!--                    <onlyAnalyze>uk.*</onlyAnalyze>-->
                 </configuration>
                 <executions>
                     <execution>
@@ -978,14 +985,6 @@
                         <goals>
                             <goal>check</goal>
                         </goals>
-                        <configuration>
-                            <effort>Low</effort>
-                            <threshold>Low</threshold>
-                            <xmlOutput>true</xmlOutput>
-                            <findbugsXmlOutputDirectory>
-                                ${project.build.directory}/findbugs
-                            </findbugsXmlOutputDirectory>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -1078,41 +1077,34 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${javadoc.plugin.version}</version>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.4.1</version>
                 <reportSets>
                     <reportSet>
-                        <id>aggregate</id>
                         <reports>
-                            <report>aggregate</report>
+                            <report>index</report>
+                            <report>plugins</report>
                         </reports>
                     </reportSet>
                 </reportSets>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${surefire.plugin.version}</version>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>${spotbugs.plugin.version}</version>
                 <configuration>
-                    <forkMode>perthread</forkMode>
-                    <parallel>classes</parallel>
-                    <argLine>-XX:MaxDirectMemorySize=1G -Xmx1900m
-                        -XX:MaxPermSize=256m
-                    </argLine>
+                    <effort>Max</effort>
+                    <threshold>Low</threshold>
+                    <failOnError>false</failOnError>
+                    <excludeFilterFile>
+                        findbugs-exclude.xml
+                    </excludeFilterFile>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>${failsafe.version}</version>
-                <reportSets>
-                    <reportSet>
-                        <id>integration-tests</id>
-                        <reports>
-                            <report>failsafe-report-only</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>3.19.0</version>
             </plugin>
         </plugins>
     </reporting>
@@ -1151,16 +1143,16 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <plugin>
-                        <groupId>com.github.spotbugs</groupId>
-                        <artifactId>spotbugs-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>analyze-compile</id>
-                                <phase>none</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
+<!--                    <plugin>-->
+<!--                        <groupId>com.github.spotbugs</groupId>-->
+<!--                        <artifactId>spotbugs-maven-plugin</artifactId>-->
+<!--                        <executions>-->
+<!--                            <execution>-->
+<!--                                <id>analyze-compile</id>-->
+<!--                                <phase>none</phase>-->
+<!--                            </execution>-->
+<!--                        </executions>-->
+<!--                    </plugin>-->
                 </plugins>
             </build>
         </profile>
@@ -1444,14 +1436,6 @@
                         <version>${failsafe.version}</version>
                         <configuration>
                             <argLine>${failsafeArgLine}</argLine>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>com.github.spotbugs</groupId>
-                        <artifactId>spotbugs-maven-plugin</artifactId>
-                        <version>${spotbugs.plugin.version}</version>
-                        <configuration>
-                            <fork>false</fork>
                         </configuration>
                     </plugin>
                     <plugin>
